<resources>
    <string name="app_name">Projetos Pessoais</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- Edit Project Screen -->
    <string name="title_activity_edit_project">EditProjectActivity</string>
    <string name="project_name_label">Project Name:</string>
    <string name="description_label">Description:</string>
    <string name="take_phone_btn">Add Photo</string>
    <string name="save_btn">Save</string>
    <string name="slide_show_btn">Slide Show</string>
    <string name="title_activity_view_project">ViewProject</string>

</resources>
